--- a/debian/rules
+++ b/debian/rules
@@ -11,10 +11,6 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# This is the debhelper compatability version to use.
-export DH_COMPAT=5
-
-
 
 build: build-stamp
 build-stamp: 
@@ -36,12 +32,11 @@ install: build
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
-	python setup.py -q install_lib --no-compile --install-dir=debian/python-logilab-astng/usr/lib/site-python
-	python setup.py -q install_headers --install-dir=debian/python-logilab-astng/usr/include/
+	python setup.py -q install --no-compile --prefix=debian/python-logilab-astng/usr
 	# remove sub-package __init__ file (created in postinst)
-	rm debian/python-logilab-astng/usr/lib/site-python/logilab/__init__.py
+	rm debian/python-logilab-astng/usr/lib/python*/site-packages/logilab/__init__.py
 	# remove test directory (installed in a separated package)
-	rm -rf debian/python-logilab-astng/usr/lib/site-python/logilab/astng/test
+	rm -rf debian/python-logilab-astng/usr/lib/python*/site-packages/logilab/astng/test
 	# install tests
 	(cd test && find . -type f -not \( -path '*/CVS/*' -or -name '*.pyc' \) -exec install -D --mode=644 {} ../debian/python-logilab-astng/usr/share/doc/python-logilab-astng/test/{} \;)
 
@@ -51,6 +46,8 @@ binary-indep: build install
 	dh_testdir 
 	dh_testroot 
 	dh_install -i
+	dh_pycentral -i 
+	dh_python -i
 	gzip -9 -c ChangeLog > changelog.gz
 	dh_installchangelogs -i
 	dh_installexamples -i
@@ -64,8 +61,8 @@ binary-indep: build install
 	dh_md5sums -i
 	dh_builddeb -i
 
-
+binary-arch:
 
 binary: binary-indep
-.PHONY: build clean binary binary-indep
+.PHONY: build clean binary binary-indep binary-arch
 
