--- a/debian/control
+++ b/debian/control
@@ -21,5 +21,5 @@ Description: extend python's abstract syntax tree
  them astng ;) by visiting an existant ast tree or by inspecting
  living object. Methods are added by monkey patching ast classes.
  .
- Homepage: http://www.logilab.org/projects/astng
+ Homepage: http://www.logilab.org/Project/name/logilab-astng
 
