--- a/debian/rules
+++ b/debian/rules
@@ -11,35 +11,39 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-
 build: build-stamp
 build-stamp: 
 	dh_testdir
+	
 	python setup.py -q build
+
 	touch build-stamp
 
 clean: 
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp configure-stamp
-	rm -rf build
-	find . -name "*.pyc" | xargs rm -f
-	rm -f changelog.gz
-	dh_clean
+
+	python setup.py clean
+
+	find . -name "*.pyc" -delete 
+	
+	dh_clean build-stamp build
 
 install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
+
 	python setup.py -q install --no-compile --prefix=debian/python-logilab-astng/usr/
+
 	# remove sub-package __init__ file (created in postinst)
 	rm debian/python-logilab-astng/usr/lib/python*/site-packages/logilab/__init__.py
 	# remove test directory (installed in a separated package)
 	rm -rf debian/python-logilab-astng/usr/lib/python*/site-packages/logilab/astng/test
+
 	# install tests
 	(cd test && find . -type f -not \( -path '*/CVS/*' -or -name '*.pyc' \) -exec install -D --mode=644 {} ../debian/python-logilab-astng/usr/share/doc/python-logilab-astng/test/{} \;)
-
 
 # Build architecture-independent files here.
 binary-indep: build install
@@ -47,13 +51,9 @@ binary-indep: build install
 	dh_testroot 
 	dh_install -i
 	dh_pycentral -i 
-	dh_python -i
-	gzip -9 -c ChangeLog > changelog.gz
-	dh_installchangelogs -i
+	dh_installchangelogs -i ChangeLog
 	dh_installexamples -i
-	dh_installdocs -i README changelog.gz
-	dh_installman -i
-	dh_link -i
+	dh_installdocs -i README
 	dh_compress -i -X.py -X.ini -X.xml -Xtest
 	dh_fixperms -i
 	dh_installdeb -i
