--- a/debian/rules
+++ b/debian/rules
@@ -26,8 +26,8 @@ clean:
 	NO_SETUPTOOLS=1 python setup.py clean
 
 	find . -name "*.pyc" -delete 
-	
-	dh_clean build-stamp build
+	rm -rf build	
+	dh_clean build-stamp
 
 install: build
 	dh_testdir
@@ -50,7 +50,7 @@ binary-indep: build install
 	dh_testdir 
 	dh_testroot 
 	dh_install -i
-	dh_pycentral -i 
+	dh_pysupport -i 
 	dh_installchangelogs -i ChangeLog
 	dh_installexamples -i
 	dh_installdocs -i README
