--- a/debian/rules
+++ b/debian/rules
@@ -26,7 +26,8 @@ clean:
 	NO_SETUPTOOLS=1 python setup.py clean
 
 	find . -name "*.pyc" -delete 
-	rm -rf build	
+	
+	rm -rf build
 	dh_clean build-stamp
 
 install: build
@@ -35,12 +36,14 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
-	NO_SETUPTOOLS=1 python setup.py -q install --no-compile --prefix=debian/python-logilab-astng/usr/
+	NO_SETUPTOOLS=1 python setup.py -q install --no-compile \
+		--root=$(CURDIR)/debian/python-logilab-astng/ \
+		--install-layout=deb
 
 	# remove sub-package __init__ file (created in postinst)
-	rm debian/python-logilab-astng/usr/lib/python*/site-packages/logilab/__init__.py
+	rm debian/python-logilab-astng/usr/lib/python*/*-packages/logilab/__init__.py
 	# remove test directory (installed in a separated package)
-	rm -rf debian/python-logilab-astng/usr/lib/python*/site-packages/logilab/astng/test
+	rm -rf debian/python-logilab-astng/usr/lib/python*/*-packages/logilab/astng/test
 
 	# install tests
 	(cd test && find . -type f -not \( -path '*/CVS/*' -or -name '*.pyc' \) -exec install -D --mode=644 {} ../debian/python-logilab-astng/usr/share/doc/python-logilab-astng/test/{} \;)
