--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include ChangeLog
 include README
 include README._ast_compatibility
 include COPYING
+include COPYING.LESSER
 include test/fulltest.sh
 recursive-include test/data *.py *.zip *.egg
 recursive-include test/data2 *.py
