--- a/debian.py3k/rules
+++ b/debian.py3k/rules
@@ -12,7 +12,6 @@
 #export DH_VERBOSE=1
 
 PACKAGE:=$(shell grep Package debian/control | cut -d ' ' -f2)
-PYDEF:=$(shell py3versions -dv)
 
 include /usr/share/python3/python.mk
 
@@ -20,22 +19,14 @@ include /usr/share/python3/python.mk
 %:
 	dh --with python3 --without python2 $@
 
-override_dh_auto_build:
-	# python module build
-	2to3-$(PYDEF) -wnv -x import setup.py
-
 override_dh_install:
 	NO_SETUPTOOLS=1 python3 setup.py -q install --no-compile \
-		--root=$(CURDIR)/debian/$(PACKAGE)/ \
-		${py_setup_install_args}
-	# transform python2 sources to python3
-	find $(CURDIR)/debian/$(PACKAGE)/usr/lib/python*/*-packages/ ! -path "*/test/*py" -name "*py" -exec 2to3-$(PYDEF) -wn {} \;
-	# remove test directory
+		--root=$(CURDIR)/debian/$(PACKAGE)/ ${py_setup_install_args}
 	rm -rf debian/$(PACKAGE)/usr/lib/python*/*-packages/logilab/astng/test
 	rm -rf debian/$(PACKAGE)/usr/lib/python*/*-packages/logilab/__init__.py
 
 override_dh_pysupport:
-	dh_python3 -V "$(PYDEF)-" --suggests=python3
+	dh_python3 --suggests=python3
 
 override_dh_installdocs:
 	dh_installdocs -i README*
