--- a/debian/rules
+++ b/debian/rules
@@ -12,21 +12,21 @@
 #export DH_VERBOSE=1
 
 build: build-stamp
-build-stamp: 
+build-stamp:
 	dh_testdir
-	
+
 	NO_SETUPTOOLS=1 python setup.py -q build
 
 	touch build-stamp
 
-clean: 
+clean:
 	dh_testdir
 	dh_testroot
 
 	NO_SETUPTOOLS=1 python setup.py clean
 
-	find . -name "*.pyc" -delete 
-	
+	find . -name "*.pyc" -delete
+
 	rm -rf build
 	dh_clean build-stamp
 
@@ -37,30 +37,30 @@ install: build
 	dh_installdirs
 
 	NO_SETUPTOOLS=1 python setup.py -q install --no-compile \
-		--root=$(CURDIR)/debian/python-logilab-astng/ \
+		--root=$(CURDIR)/debian/python-astroid/ \
 		--install-layout=deb
 
 	# remove sub-package __init__ file (created in postinst)
-	rm debian/python-logilab-astng/usr/lib/python*/*-packages/logilab/__init__.py
+	rm debian/python-astroid/usr/lib/python*/*-packages/logilab/__init__.py
 	# remove test directory (installed in a separated package)
-	rm -rf debian/python-logilab-astng/usr/lib/python*/*-packages/logilab/astng/test
+	rm -rf debian/python-astroid/usr/lib/python*/*-packages/logilab/astroid/test
 
 	# install tests
-	(cd test && find . -type f -not \( -path '*/CVS/*' -or -name '*.pyc' \) -exec install -D --mode=644 {} ../debian/python-logilab-astng/usr/share/doc/python-logilab-astng/test/{} \;)
+	(cd test && find . -type f -not \( -path '*/CVS/*' -or -name '*.pyc' \) -exec install -D --mode=644 {} ../debian/python-astroid/usr/share/doc/python-astroid/test/{} \;)
 
 # Build architecture-independent files here.
 binary-indep: build install
-	dh_testdir 
-	dh_testroot 
+	dh_testdir
+	dh_testroot
 	dh_install -i
-	dh_pysupport -i 
+	dh_pysupport -i
 	dh_installchangelogs -i ChangeLog
 	dh_installexamples -i
 	dh_installdocs -i README
 	dh_compress -i -X.py -X.ini -X.xml -Xtest
 	dh_fixperms -i
 	dh_installdeb -i
-	dh_gencontrol -i 
+	dh_gencontrol -i
 	dh_md5sums -i
 	dh_builddeb -i
 
